[clustering] rename KmeansClustering to Kmeans and RegularSpaceClustering to RegularSpace

--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -36,7 +36,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:02.821097Z",
+     "iopub.status.busy": "2020-10-23T07:46:02.819540Z",
+     "iopub.status.idle": "2020-10-23T07:46:03.578605Z",
+     "shell.execute_reply": "2020-10-23T07:46:03.578925Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -61,7 +68,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:03.582154Z",
+     "iopub.status.busy": "2020-10-23T07:46:03.581711Z",
+     "iopub.status.idle": "2020-10-23T07:46:03.584089Z",
+     "shell.execute_reply": "2020-10-23T07:46:03.584384Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"# hidden states:\", ground_truth.n_hidden_states)\n",
@@ -78,7 +92,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:03.588047Z",
+     "iopub.status.busy": "2020-10-23T07:46:03.586811Z",
+     "iopub.status.idle": "2020-10-23T07:46:03.591336Z",
+     "shell.execute_reply": "2020-10-23T07:46:03.591004Z"
+    }
+   },
    "outputs": [],
    "source": [
     "(hidden_trajectory, observation_trajectory) = ground_truth.simulate(2000)"
@@ -94,7 +115,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:03.596924Z",
+     "iopub.status.busy": "2020-10-23T07:46:03.596534Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.329189Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.328794Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -156,7 +184,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.336192Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.333956Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.344098Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.344592Z"
+    }
+   },
    "outputs": [],
    "source": [
     "hmm_est_real = hmm.MaximumLikelihoodHMM(\n",
@@ -167,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.347569Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.347071Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.349019Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.349505Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Maximum absolute deviation: {:.3f}\".format(\n",
@@ -199,7 +241,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.353964Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.352932Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.451073Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.450636Z"
+    }
+   },
    "outputs": [],
    "source": [
     "init_hmm_random = hmm.init.discrete.random_guess(n_observation_states=3, n_hidden_states=2)\n",
@@ -218,7 +267,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.454157Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.453663Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.455567Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.456091Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Maximum absolute deviation: {:.3f}\".format(\n",
@@ -240,7 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.459227Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.458741Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.525408Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.525938Z"
+    }
+   },
    "outputs": [],
    "source": [
     "estimator = hmm.BayesianHMM.default(observation_trajectory, n_hidden_states=2, lagtime=1)"
@@ -256,7 +319,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.529110Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.528612Z",
+     "iopub.status.idle": "2020-10-23T07:46:04.531085Z",
+     "shell.execute_reply": "2020-10-23T07:46:04.530591Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Maximum absolute deviation: {:.3f}\".format(\n",
@@ -274,7 +344,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:04.534040Z",
+     "iopub.status.busy": "2020-10-23T07:46:04.533508Z",
+     "iopub.status.idle": "2020-10-23T07:46:07.811886Z",
+     "shell.execute_reply": "2020-10-23T07:46:07.812403Z"
+    }
+   },
    "outputs": [],
    "source": [
     "posterior = estimator.fit(\n",
@@ -294,7 +371,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:07.815439Z",
+     "iopub.status.busy": "2020-10-23T07:46:07.814947Z",
+     "iopub.status.idle": "2020-10-23T07:46:07.818239Z",
+     "shell.execute_reply": "2020-10-23T07:46:07.817734Z"
+    }
+   },
    "outputs": [],
    "source": [
     "stats = posterior.gather_stats(\"transition_model/transition_matrix\", confidence=0.95)"
@@ -310,7 +394,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:07.832944Z",
+     "iopub.status.busy": "2020-10-23T07:46:07.831985Z",
+     "iopub.status.idle": "2020-10-23T07:46:07.974645Z",
+     "shell.execute_reply": "2020-10-23T07:46:07.975140Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x = [0, 1, 2, 3]\n",
@@ -334,7 +425,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:07.978119Z",
+     "iopub.status.busy": "2020-10-23T07:46:07.977643Z",
+     "iopub.status.idle": "2020-10-23T07:46:07.979144Z",
+     "shell.execute_reply": "2020-10-23T07:46:07.979628Z"
+    }
+   },
    "outputs": [],
    "source": [
     "estimator = hmm.BayesianHMM(initial_hmm=posterior.prior)"
@@ -350,7 +448,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:07.984912Z",
+     "iopub.status.busy": "2020-10-23T07:46:07.984412Z",
+     "iopub.status.idle": "2020-10-23T07:46:11.475955Z",
+     "shell.execute_reply": "2020-10-23T07:46:11.475446Z"
+    }
+   },
    "outputs": [],
    "source": [
     "posterior = estimator.fit(\n",
@@ -403,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
