--- a/docs/source/notebooks/mlmsm.ipynb
+++ b/docs/source/notebooks/mlmsm.ipynb
@@ -18,7 +18,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:11.869668Z",
+     "iopub.status.busy": "2020-10-23T07:48:11.869102Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.939364Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.939713Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime\n",
@@ -51,7 +58,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.944753Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.944250Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.946195Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.946703Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -73,7 +87,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.956940Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.956505Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.959087Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.958629Z"
+    }
+   },
    "outputs": [],
    "source": [
     "trajectory = true_msm.simulate(50000)"
@@ -89,7 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.964014Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.963515Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.966866Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.967437Z"
+    }
+   },
    "outputs": [],
    "source": [
     "counts_estimator = deeptime.markov.TransitionCountEstimator(\n",
@@ -108,7 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.972763Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.972322Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.974383Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.974746Z"
+    }
+   },
    "outputs": [],
    "source": [
     "msm = estimator.fit(counts).fetch_model()"
@@ -124,7 +159,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.979612Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.979060Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.982902Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.982427Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Estimated transition matrix:\", msm.transition_matrix)\n",
@@ -141,7 +183,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.987463Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.986649Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.990468Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.989701Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"True stationary vector:\", true_msm.stationary_distribution)"
@@ -150,7 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:12.996991Z",
+     "iopub.status.busy": "2020-10-23T07:48:12.996486Z",
+     "iopub.status.idle": "2020-10-23T07:48:12.999250Z",
+     "shell.execute_reply": "2020-10-23T07:48:12.999702Z"
+    }
+   },
    "outputs": [],
    "source": [
     "estimator.stationary_distribution_constraint = true_msm.stationary_distribution\n",
@@ -161,7 +217,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.004283Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.003715Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.006853Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.006392Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Estimated transition matrix:\", msm_statdist.transition_matrix)\n",
@@ -178,7 +241,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.013532Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.010562Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.405009Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.404596Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -205,7 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.408076Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.407609Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.409817Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.409387Z"
+    }
+   },
    "outputs": [],
    "source": [
     "estimator = deeptime.markov.msm.BayesianMSM(\n",
@@ -226,7 +303,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.414308Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.413519Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.442810Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.443126Z"
+    }
+   },
    "outputs": [],
    "source": [
     "counts_estimator = deeptime.markov.TransitionCountEstimator(\n",
@@ -245,7 +329,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.448927Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.448280Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.465107Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.464332Z"
+    }
+   },
    "outputs": [],
    "source": [
     "bmsm_posterior = estimator.fit(counts_effective).fetch_model()"
@@ -261,7 +352,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.468406Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.467952Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.470754Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.470273Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"# samples:\", len(bmsm_posterior.samples))"
@@ -277,7 +375,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.473884Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.473459Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.572687Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.573044Z"
+    }
+   },
    "outputs": [],
    "source": [
     "stats_P = bmsm_posterior.gather_stats(\"transition_matrix\")\n",
@@ -295,7 +400,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.576354Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.575960Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.590033Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.590369Z"
+    }
+   },
    "outputs": [],
    "source": [
     "stats_mfpt = bmsm_posterior.gather_stats(\"mfpt\", A=0, B=1)"
@@ -311,7 +423,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.605805Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.605386Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.778192Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.777532Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.plot([0, 1], stats_timescales.mean, label=\"bmsm timescales\")\n",
@@ -331,7 +450,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:48:13.782504Z",
+     "iopub.status.busy": "2020-10-23T07:48:13.781984Z",
+     "iopub.status.idle": "2020-10-23T07:48:13.798326Z",
+     "shell.execute_reply": "2020-10-23T07:48:13.797789Z"
+    }
+   },
    "outputs": [],
    "source": [
     "stats_mfpt = bmsm_posterior.gather_stats(\"mfpt\", store_samples=True, A=0, B=1)\n",
@@ -370,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
