--- a/docs/source/notebooks/pcca.ipynb
+++ b/docs/source/notebooks/pcca.ipynb
@@ -28,7 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:11.745279Z",
+     "iopub.status.busy": "2020-10-23T07:51:11.744459Z",
+     "iopub.status.idle": "2020-10-23T07:51:12.717909Z",
+     "shell.execute_reply": "2020-10-23T07:51:12.718498Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -47,7 +54,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:12.724136Z",
+     "iopub.status.busy": "2020-10-23T07:51:12.723524Z",
+     "iopub.status.idle": "2020-10-23T07:51:13.116022Z",
+     "shell.execute_reply": "2020-10-23T07:51:13.116334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
@@ -67,10 +81,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:13.227929Z",
+     "iopub.status.busy": "2020-10-23T07:51:13.227412Z",
+     "iopub.status.idle": "2020-10-23T07:51:13.230131Z",
+     "shell.execute_reply": "2020-10-23T07:51:13.229703Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "clustering = deeptime.clustering.KmeansClustering(n_clusters=50, fixed_seed=13) \\\n",
+    "clustering = deeptime.clustering.Kmeans(n_clusters=50, fixed_seed=13) \\\n",
     "    .fit(data).fetch_model()\n",
     "assignments = clustering.transform(data)"
    ]
@@ -78,7 +99,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:13.245794Z",
+     "iopub.status.busy": "2020-10-23T07:51:13.245378Z",
+     "iopub.status.idle": "2020-10-23T07:51:13.685005Z",
+     "shell.execute_reply": "2020-10-23T07:51:13.684610Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, 1, figsize=(18, 5))\n",
@@ -100,7 +128,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:13.688725Z",
+     "iopub.status.busy": "2020-10-23T07:51:13.688099Z",
+     "iopub.status.idle": "2020-10-23T07:51:13.696662Z",
+     "shell.execute_reply": "2020-10-23T07:51:13.696133Z"
+    }
+   },
    "outputs": [],
    "source": [
     "msm = deeptime.markov.msm.MaximumLikelihoodMSM() \\\n",
@@ -119,7 +154,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:13.702245Z",
+     "iopub.status.busy": "2020-10-23T07:51:13.701693Z",
+     "iopub.status.idle": "2020-10-23T07:51:20.932238Z",
+     "shell.execute_reply": "2020-10-23T07:51:20.932680Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -155,7 +197,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:20.935987Z",
+     "iopub.status.busy": "2020-10-23T07:51:20.935465Z",
+     "iopub.status.idle": "2020-10-23T07:51:20.945592Z",
+     "shell.execute_reply": "2020-10-23T07:51:20.945933Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcca = msm.pcca(n_metastable_sets=2)"
@@ -171,7 +220,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:20.949378Z",
+     "iopub.status.busy": "2020-10-23T07:51:20.948943Z",
+     "iopub.status.idle": "2020-10-23T07:51:20.951235Z",
+     "shell.execute_reply": "2020-10-23T07:51:20.951540Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcca.coarse_grained_transition_matrix"
@@ -187,7 +243,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:20.954251Z",
+     "iopub.status.busy": "2020-10-23T07:51:20.953873Z",
+     "iopub.status.idle": "2020-10-23T07:51:20.955850Z",
+     "shell.execute_reply": "2020-10-23T07:51:20.956155Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Memberships: {pcca.memberships.shape}\")"
@@ -196,7 +259,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:20.970770Z",
+     "iopub.status.busy": "2020-10-23T07:51:20.969617Z",
+     "iopub.status.idle": "2020-10-23T07:51:21.373827Z",
+     "shell.execute_reply": "2020-10-23T07:51:21.373425Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(15, 10))\n",
@@ -222,7 +292,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:21.377596Z",
+     "iopub.status.busy": "2020-10-23T07:51:21.377048Z",
+     "iopub.status.idle": "2020-10-23T07:51:21.379788Z",
+     "shell.execute_reply": "2020-10-23T07:51:21.380184Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcca.coarse_grained_stationary_probability"
@@ -238,7 +315,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:21.383068Z",
+     "iopub.status.busy": "2020-10-23T07:51:21.382613Z",
+     "iopub.status.idle": "2020-10-23T07:51:21.384402Z",
+     "shell.execute_reply": "2020-10-23T07:51:21.384784Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Metastable distributions shape:\", pcca.metastable_distributions.shape)"
@@ -247,7 +331,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:21.401697Z",
+     "iopub.status.busy": "2020-10-23T07:51:21.401196Z",
+     "iopub.status.idle": "2020-10-23T07:51:21.790003Z",
+     "shell.execute_reply": "2020-10-23T07:51:21.789546Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ix = np.argsort(pcca.assignments)\n",
@@ -278,7 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:21.793519Z",
+     "iopub.status.busy": "2020-10-23T07:51:21.793009Z",
+     "iopub.status.idle": "2020-10-23T07:51:21.795880Z",
+     "shell.execute_reply": "2020-10-23T07:51:21.796362Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcca.assignments"
@@ -323,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
