--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -57,7 +57,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:05.627227Z",
+     "iopub.status.busy": "2020-10-23T07:51:05.624589Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.610162Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.610497Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np  # NumPy for general numerical operations\n",
@@ -74,7 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.614180Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.613766Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.616129Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.615685Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica = deeptime.decomposition.TICA(lagtime=1)"
@@ -94,7 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.620705Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.620130Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.630194Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.629779Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data = np.random.uniform(size=(1000, 5))\n",
@@ -111,7 +132,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.633770Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.633152Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.637445Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.637853Z"
+    }
+   },
    "outputs": [],
    "source": [
     "covariances = deeptime.decomposition.TICA.covariance_estimator(lagtime=1) \\\n",
@@ -129,7 +157,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.641055Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.640643Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.643328Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.642916Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model = tica.fetch_model()\n",
@@ -169,7 +204,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.647541Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.646587Z",
+     "iopub.status.idle": "2020-10-23T07:51:06.653139Z",
+     "shell.execute_reply": "2020-10-23T07:51:06.652689Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# create dataset instance\n",
@@ -192,7 +234,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:06.661400Z",
+     "iopub.status.busy": "2020-10-23T07:51:06.660903Z",
+     "iopub.status.idle": "2020-10-23T07:51:07.792522Z",
+     "shell.execute_reply": "2020-10-23T07:51:07.792109Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt  # plotting\n",
@@ -238,7 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:07.797657Z",
+     "iopub.status.busy": "2020-10-23T07:51:07.797266Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.027511Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.027103Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -282,7 +338,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.030822Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.030430Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.032565Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.032176Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica = deeptime.decomposition.TICA(\n",
@@ -303,7 +366,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.035576Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.035108Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.038652Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.038034Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica_model = tica.fit(feature_trajectory, lagtime=1).fetch_model()  # fit and fetch model"
@@ -319,7 +389,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.055960Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.055526Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.272249Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.271152Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
@@ -353,7 +430,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.280214Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.279498Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.283406Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.282917Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica_model.timescales(lagtime=1)"
@@ -379,7 +463,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.289201Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.288316Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.291100Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.291878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica_model.feature_component_correlation"
@@ -416,7 +507,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.296561Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.295804Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.303698Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.304330Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica.scaling = None\n",
@@ -433,7 +531,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.308761Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.308284Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.311049Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.311478Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica.scaling = \"kinetic_map\"  # default\n",
@@ -450,7 +555,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.315403Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.314812Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.318202Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.318757Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica.scaling = \"commute_map\"\n",
@@ -467,7 +579,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.337994Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.337443Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.595251Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.595861Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax1 = plt.subplots(1, 1)\n",
@@ -494,7 +613,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.599567Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.599098Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.602629Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.601733Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica = deeptime.decomposition.TICA(lagtime=1, dim=1)"
@@ -510,7 +636,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.607227Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.606611Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.610195Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.610684Z"
+    }
+   },
    "outputs": [],
    "source": [
     "koopman_estimator = deeptime.covariance.KoopmanWeightingEstimator(lagtime=1)\n",
@@ -527,7 +660,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.614594Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.613997Z",
+     "iopub.status.idle": "2020-10-23T07:51:08.617291Z",
+     "shell.execute_reply": "2020-10-23T07:51:08.618027Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tica_model_reweighted = tica.fit(feature_trajectory, weights=reweighting_model) \\\n",
@@ -544,7 +684,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:51:08.698443Z",
+     "iopub.status.busy": "2020-10-23T07:51:08.697573Z",
+     "iopub.status.idle": "2020-10-23T07:51:09.119997Z",
+     "shell.execute_reply": "2020-10-23T07:51:09.120504Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
@@ -599,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
