--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -24,7 +24,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:39.605473Z",
+     "iopub.status.busy": "2020-10-23T07:50:39.602925Z",
+     "iopub.status.idle": "2020-10-23T07:50:40.431192Z",
+     "shell.execute_reply": "2020-10-23T07:50:40.431703Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -47,7 +54,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:40.436284Z",
+     "iopub.status.busy": "2020-10-23T07:50:40.435776Z",
+     "iopub.status.idle": "2020-10-23T07:50:40.445965Z",
+     "shell.execute_reply": "2020-10-23T07:50:40.444908Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sim = deeptime.data.drunkards_walk(grid_size=(10, 10),\n",
@@ -71,7 +85,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:40.460309Z",
+     "iopub.status.busy": "2020-10-23T07:50:40.459527Z",
+     "iopub.status.idle": "2020-10-23T07:50:40.494215Z",
+     "shell.execute_reply": "2020-10-23T07:50:40.493257Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sim.add_barrier((5, 1), (5, 5))\n",
@@ -96,7 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:40.500252Z",
+     "iopub.status.busy": "2020-10-23T07:50:40.499729Z",
+     "iopub.status.idle": "2020-10-23T07:50:40.502878Z",
+     "shell.execute_reply": "2020-10-23T07:50:40.502366Z"
+    }
+   },
    "outputs": [],
    "source": [
     "start = (7, 2)\n",
@@ -114,7 +142,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:40.507731Z",
+     "iopub.status.busy": "2020-10-23T07:50:40.507002Z",
+     "iopub.status.idle": "2020-10-23T07:50:41.534113Z",
+     "shell.execute_reply": "2020-10-23T07:50:41.533734Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
@@ -141,7 +176,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:41.537886Z",
+     "iopub.status.busy": "2020-10-23T07:50:41.537247Z",
+     "iopub.status.idle": "2020-10-23T07:50:41.545514Z",
+     "shell.execute_reply": "2020-10-23T07:50:41.544993Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Internal Markov state model with {sim.msm.n_states} states to cover the {sim.grid_size} grid.\")\n",
@@ -214,7 +256,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:41.557606Z",
+     "iopub.status.busy": "2020-10-23T07:50:41.557095Z",
+     "iopub.status.idle": "2020-10-23T07:50:42.323277Z",
+     "shell.execute_reply": "2020-10-23T07:50:42.322856Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(15, 10))\n",
@@ -292,7 +341,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:42.326518Z",
+     "iopub.status.busy": "2020-10-23T07:50:42.326131Z",
+     "iopub.status.idle": "2020-10-23T07:50:42.328688Z",
+     "shell.execute_reply": "2020-10-23T07:50:42.328239Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Gross flux shape {flux.gross_flux.shape}, net flux shape {flux.net_flux.shape}\")"
@@ -308,7 +364,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:42.398128Z",
+     "iopub.status.busy": "2020-10-23T07:50:42.382950Z",
+     "iopub.status.idle": "2020-10-23T07:50:47.006848Z",
+     "shell.execute_reply": "2020-10-23T07:50:47.007263Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(18, 10))\n",
@@ -351,7 +414,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:47.011148Z",
+     "iopub.status.busy": "2020-10-23T07:50:47.010461Z",
+     "iopub.status.idle": "2020-10-23T07:50:47.012634Z",
+     "shell.execute_reply": "2020-10-23T07:50:47.013132Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Total flux = {flux.total_flux:.3e}/step\")"
@@ -371,7 +441,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:47.016486Z",
+     "iopub.status.busy": "2020-10-23T07:50:47.016032Z",
+     "iopub.status.idle": "2020-10-23T07:50:47.017909Z",
+     "shell.execute_reply": "2020-10-23T07:50:47.018300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f'Rate = {flux.rate:.3e}/step')"
@@ -387,7 +464,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:47.021034Z",
+     "iopub.status.busy": "2020-10-23T07:50:47.020625Z",
+     "iopub.status.idle": "2020-10-23T07:50:47.023003Z",
+     "shell.execute_reply": "2020-10-23T07:50:47.023395Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f'MFPT = {flux.mfpt:.3f} steps')"
@@ -407,7 +491,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:47.026060Z",
+     "iopub.status.busy": "2020-10-23T07:50:47.025628Z",
+     "iopub.status.idle": "2020-10-23T07:50:48.144209Z",
+     "shell.execute_reply": "2020-10-23T07:50:48.143382Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcca = sim.msm.pcca(6)"
@@ -423,7 +514,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:48.163550Z",
+     "iopub.status.busy": "2020-10-23T07:50:48.162527Z",
+     "iopub.status.idle": "2020-10-23T07:50:49.657370Z",
+     "shell.execute_reply": "2020-10-23T07:50:49.656932Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(2, 3, figsize=(15, 10), sharex=True, sharey=True)\n",
@@ -448,7 +546,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:49.662163Z",
+     "iopub.status.busy": "2020-10-23T07:50:49.661703Z",
+     "iopub.status.idle": "2020-10-23T07:50:49.667410Z",
+     "shell.execute_reply": "2020-10-23T07:50:49.666954Z"
+    }
+   },
    "outputs": [],
    "source": [
     "remainder_upper = []\n",
@@ -466,7 +571,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:49.671521Z",
+     "iopub.status.busy": "2020-10-23T07:50:49.670776Z",
+     "iopub.status.idle": "2020-10-23T07:50:49.673790Z",
+     "shell.execute_reply": "2020-10-23T07:50:49.674485Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sets, tpt = flux.coarse_grain([sim.home_state, sim.bar_state, remainder_upper, remainder_lower])"
@@ -482,7 +594,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:49.693546Z",
+     "iopub.status.busy": "2020-10-23T07:50:49.692740Z",
+     "iopub.status.idle": "2020-10-23T07:50:49.937763Z",
+     "shell.execute_reply": "2020-10-23T07:50:49.937313Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# enumerating assignments\n",
@@ -510,7 +629,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:49.968478Z",
+     "iopub.status.busy": "2020-10-23T07:50:49.951946Z",
+     "iopub.status.idle": "2020-10-23T07:50:50.472139Z",
+     "shell.execute_reply": "2020-10-23T07:50:50.472613Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -568,7 +694,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:50.479663Z",
+     "iopub.status.busy": "2020-10-23T07:50:50.478987Z",
+     "iopub.status.idle": "2020-10-23T07:50:50.755203Z",
+     "shell.execute_reply": "2020-10-23T07:50:50.756130Z"
+    }
+   },
    "outputs": [],
    "source": [
     "paths, capacities = flux.pathways(fraction=.3, maxiter=1000)\n",
@@ -585,7 +718,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:50.793407Z",
+     "iopub.status.busy": "2020-10-23T07:50:50.792417Z",
+     "iopub.status.idle": "2020-10-23T07:50:51.746994Z",
+     "shell.execute_reply": "2020-10-23T07:50:51.746585Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
@@ -618,7 +758,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:51.827290Z",
+     "iopub.status.busy": "2020-10-23T07:50:51.787729Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.002324Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.001850Z"
+    }
+   },
    "outputs": [],
    "source": [
     "trajs = []\n",
@@ -636,7 +783,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.009165Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.008763Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.057938Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.057441Z"
+    }
+   },
    "outputs": [],
    "source": [
     "count_model = deeptime.markov.TransitionCountEstimator(1, 'sliding', n_states=sim.n_states) \\\n",
@@ -647,7 +801,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.061171Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.060695Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.063376Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.063829Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"States not included in the count model: \"\n",
@@ -664,7 +825,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.067462Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.067000Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.153079Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.152393Z"
+    }
+   },
    "outputs": [],
    "source": [
     "mlmsm = deeptime.markov.msm.MaximumLikelihoodMSM().fit(count_model).fetch_model()"
@@ -680,7 +848,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.156812Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.156370Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.158618Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.159044Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Count fraction:\", mlmsm.count_fraction)\n",
@@ -697,7 +872,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.162406Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.161959Z",
+     "iopub.status.idle": "2020-10-23T07:50:53.166173Z",
+     "shell.execute_reply": "2020-10-23T07:50:53.165724Z"
+    }
+   },
    "outputs": [],
    "source": [
     "flux = mlmsm.reactive_flux(\n",
@@ -715,7 +897,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:53.173453Z",
+     "iopub.status.busy": "2020-10-23T07:50:53.172218Z",
+     "iopub.status.idle": "2020-10-23T07:50:54.272117Z",
+     "shell.execute_reply": "2020-10-23T07:50:54.271651Z"
+    }
+   },
    "outputs": [],
    "source": [
     "paths, capacities = flux.pathways(.3)\n",
@@ -782,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
