--- a/docs/source/notebooks/transition-counting.ipynb
+++ b/docs/source/notebooks/transition-counting.ipynb
@@ -29,7 +29,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:56.796578Z",
+     "iopub.status.busy": "2020-10-23T07:50:56.794016Z",
+     "iopub.status.idle": "2020-10-23T07:50:57.784347Z",
+     "shell.execute_reply": "2020-10-23T07:50:57.783843Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime\n",
@@ -51,7 +58,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:57.789323Z",
+     "iopub.status.busy": "2020-10-23T07:50:57.788670Z",
+     "iopub.status.idle": "2020-10-23T07:50:57.791025Z",
+     "shell.execute_reply": "2020-10-23T07:50:57.790535Z"
+    }
+   },
    "outputs": [],
    "source": [
     "trajectory = np.array([0, 1, 2, 3, 4, 5, 4, 3, 2, 1, 0, 1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1, 7])\n",
@@ -68,7 +82,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:57.802621Z",
+     "iopub.status.busy": "2020-10-23T07:50:57.801670Z",
+     "iopub.status.idle": "2020-10-23T07:50:57.805687Z",
+     "shell.execute_reply": "2020-10-23T07:50:57.805122Z"
+    }
+   },
    "outputs": [],
    "source": [
     "counts.count_matrix"
@@ -84,7 +105,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:57.809428Z",
+     "iopub.status.busy": "2020-10-23T07:50:57.808928Z",
+     "iopub.status.idle": "2020-10-23T07:50:57.813808Z",
+     "shell.execute_reply": "2020-10-23T07:50:57.813381Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for state, histogram_value in enumerate(counts.state_histogram):\n",
@@ -107,7 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:57.818059Z",
+     "iopub.status.busy": "2020-10-23T07:50:57.817575Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.387290Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.387710Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -130,7 +165,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.393001Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.391674Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.395023Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.395477Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Weakly connected sets:\", counts.connected_sets(directed=False))\n",
@@ -147,7 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.399186Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.398770Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.400572Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.400983Z"
+    }
+   },
    "outputs": [],
    "source": [
     "submodel_explicit = counts.submodel(states=[0, 1, 7])"
@@ -163,7 +212,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.404030Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.403623Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.405590Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.405998Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"# states:\", submodel_explicit.n_states)\n",
@@ -180,7 +236,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.409266Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.408771Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.411745Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.412109Z"
+    }
+   },
    "outputs": [],
    "source": [
     "submodel_explicit.symbols_to_states([0, 1, 7, 8])"
@@ -196,7 +259,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.415872Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.415339Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.418693Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.418215Z"
+    }
+   },
    "outputs": [],
    "source": [
     "submodel_explicit.transform_discrete_trajectories_to_submodel(trajectory)"
@@ -212,7 +282,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.422593Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.422182Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.424001Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.424322Z"
+    }
+   },
    "outputs": [],
    "source": [
     "submodel = counts.submodel_largest(connectivity_threshold=1., directed=True)"
@@ -228,7 +305,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:50:58.444721Z",
+     "iopub.status.busy": "2020-10-23T07:50:58.444263Z",
+     "iopub.status.idle": "2020-10-23T07:50:58.593675Z",
+     "shell.execute_reply": "2020-10-23T07:50:58.593136Z"
+    }
+   },
    "outputs": [],
    "source": [
     "G = nx.from_numpy_matrix(submodel.count_matrix, create_using=nx.DiGraph())\n",
@@ -284,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
