--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -43,7 +43,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:13.664920Z",
+     "iopub.status.busy": "2020-10-23T07:46:13.662524Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.524502Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.524017Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime"
@@ -59,7 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.527820Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.527451Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.529615Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.529297Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vamp_estimator = deeptime.decomposition.VAMP(\n",
@@ -90,7 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.534846Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.533054Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.539334Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.538929Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# create dataset instance with fixed seed for reproducibility\n",
@@ -110,7 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.543582Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.543049Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.547220Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.547718Z"
+    }
+   },
    "outputs": [],
    "source": [
     "covars = deeptime.decomposition.VAMP.covariance_estimator(\n",
@@ -134,7 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.554924Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.554438Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.556996Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.556493Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.output_dimension"
@@ -150,7 +185,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.560004Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.559527Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.562073Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.561564Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.score()"
@@ -166,7 +208,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.565105Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.564613Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.845950Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.845555Z"
+    }
+   },
    "outputs": [],
    "source": [
     "projection = model.transform(feature_trajectory)\n",
@@ -227,7 +276,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.849565Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.849165Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.851448Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.851835Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"mean_0 shape:\", model.mean_0.shape)\n",
@@ -260,7 +316,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.855513Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.855086Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.857333Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.857639Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"singular values:\", model.singular_values)\n",
@@ -284,7 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.860544Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.860179Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.862366Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.861907Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x = model.transform(feature_trajectory, right=False)"
@@ -293,7 +363,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.865404Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.864877Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.867816Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.867426Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.singular_values"
@@ -302,7 +379,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.870708Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.870209Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.873154Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.872672Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.output_dimension"
@@ -311,7 +395,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.877827Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.877169Z",
+     "iopub.status.idle": "2020-10-23T07:46:14.880493Z",
+     "shell.execute_reply": "2020-10-23T07:46:14.880088Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x.shape"
@@ -320,7 +411,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:14.895591Z",
+     "iopub.status.busy": "2020-10-23T07:46:14.894920Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.016222Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.015815Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.plot(model.transform(feature_trajectory, right=False), label=\"f\")\n",
@@ -365,7 +463,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.020208Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.019570Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.022616Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.022224Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.score(score_method=\"VAMP1\")"
@@ -381,7 +486,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.026313Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.025683Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.028615Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.028222Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.score(score_method=\"VAMP2\")"
@@ -397,7 +509,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.032354Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.031765Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.034710Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.034325Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model.score(score_method=\"VAMPE\")"
@@ -429,7 +548,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.037658Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.037263Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.039931Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.039562Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(vamp_estimator.scaling)"
@@ -445,7 +571,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.055023Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.043793Z",
+     "iopub.status.idle": "2020-10-23T07:46:15.174212Z",
+     "shell.execute_reply": "2020-10-23T07:46:15.173812Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vamp_estimator.scaling = \"kinetic_map\"\n",
@@ -476,7 +609,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:15.177535Z",
+     "iopub.status.busy": "2020-10-23T07:46:15.176967Z",
+     "iopub.status.idle": "2020-10-23T07:46:36.163949Z",
+     "shell.execute_reply": "2020-10-23T07:46:36.164466Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pbf_simulator = deeptime.data.position_based_fluids(n_jobs=8)"
@@ -492,7 +632,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:36.166655Z",
+     "iopub.status.busy": "2020-10-23T07:46:36.166177Z",
+     "iopub.status.idle": "2020-10-23T07:46:36.169454Z",
+     "shell.execute_reply": "2020-10-23T07:46:36.169949Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pbf_simulator.n_particles"
@@ -510,7 +657,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:36.172210Z",
+     "iopub.status.busy": "2020-10-23T07:46:36.171723Z",
+     "iopub.status.idle": "2020-10-23T07:46:55.507465Z",
+     "shell.execute_reply": "2020-10-23T07:46:55.507892Z"
+    }
+   },
    "outputs": [],
    "source": [
     "trajectory = pbf_simulator.simulate_oscillatory_force(n_oscillations=7, n_steps=400)"
@@ -526,7 +680,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:46:55.511423Z",
+     "iopub.status.busy": "2020-10-23T07:46:55.510931Z",
+     "iopub.status.idle": "2020-10-23T07:47:09.231403Z",
+     "shell.execute_reply": "2020-10-23T07:47:09.231809Z"
+    }
+   },
    "outputs": [],
    "source": [
     "animation = pbf_simulator.make_animation(trajectory, stride=30, mode=\"scatter\", figsize=(5, 4))\n",
@@ -544,7 +705,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:09.235618Z",
+     "iopub.status.busy": "2020-10-23T07:47:09.235135Z",
+     "iopub.status.idle": "2020-10-23T07:47:09.237583Z",
+     "shell.execute_reply": "2020-10-23T07:47:09.237163Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(trajectory.shape)"
@@ -560,7 +728,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:09.241621Z",
+     "iopub.status.busy": "2020-10-23T07:47:09.241204Z",
+     "iopub.status.idle": "2020-10-23T07:47:14.119463Z",
+     "shell.execute_reply": "2020-10-23T07:47:14.118662Z"
+    }
+   },
    "outputs": [],
    "source": [
     "n_grid_x = 20\n",
@@ -580,7 +755,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:14.137316Z",
+     "iopub.status.busy": "2020-10-23T07:47:14.135726Z",
+     "iopub.status.idle": "2020-10-23T07:47:21.413017Z",
+     "shell.execute_reply": "2020-10-23T07:47:21.413532Z"
+    }
+   },
    "outputs": [],
    "source": [
     "animation = pbf_simulator.make_animation(kde_trajectory, stride=30, mode=\"contourf\", \n",
@@ -598,7 +780,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:21.417187Z",
+     "iopub.status.busy": "2020-10-23T07:47:21.416792Z",
+     "iopub.status.idle": "2020-10-23T07:47:21.459180Z",
+     "shell.execute_reply": "2020-10-23T07:47:21.458582Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model = deeptime.decomposition.VAMP(lagtime=100).fit(kde_trajectory).fetch_model()"
@@ -614,7 +803,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:21.462837Z",
+     "iopub.status.busy": "2020-10-23T07:47:21.462062Z",
+     "iopub.status.idle": "2020-10-23T07:47:21.475904Z",
+     "shell.execute_reply": "2020-10-23T07:47:21.475450Z"
+    }
+   },
    "outputs": [],
    "source": [
     "projection_left = model.transform(kde_trajectory, forward=True)\n",
@@ -631,7 +827,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:21.494496Z",
+     "iopub.status.busy": "2020-10-23T07:47:21.490938Z",
+     "iopub.status.idle": "2020-10-23T07:47:23.102928Z",
+     "shell.execute_reply": "2020-10-23T07:47:23.103620Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -679,7 +882,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:23.120580Z",
+     "iopub.status.busy": "2020-10-23T07:47:23.119853Z",
+     "iopub.status.idle": "2020-10-23T07:47:23.245802Z",
+     "shell.execute_reply": "2020-10-23T07:47:23.245392Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.plot(model.singular_values[:10], 'o')\n",
@@ -702,7 +912,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:23.248981Z",
+     "iopub.status.busy": "2020-10-23T07:47:23.248428Z",
+     "iopub.status.idle": "2020-10-23T07:47:23.264391Z",
+     "shell.execute_reply": "2020-10-23T07:47:23.263896Z"
+    }
+   },
    "outputs": [],
    "source": [
     "forward_full = model.forward(kde_trajectory)"
@@ -718,7 +935,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:23.284312Z",
+     "iopub.status.busy": "2020-10-23T07:47:23.282454Z",
+     "iopub.status.idle": "2020-10-23T07:47:37.273950Z",
+     "shell.execute_reply": "2020-10-23T07:47:37.274345Z"
+    }
+   },
    "outputs": [],
    "source": [
     "animation = pbf_simulator.make_animation([kde_trajectory, forward_full], stride=30, mode=\"contourf\", \n",
@@ -743,7 +967,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:37.277983Z",
+     "iopub.status.busy": "2020-10-23T07:47:37.277594Z",
+     "iopub.status.idle": "2020-10-23T07:47:37.325849Z",
+     "shell.execute_reply": "2020-10-23T07:47:37.325413Z"
+    }
+   },
    "outputs": [],
    "source": [
     "forward_component0 = model.forward(kde_trajectory, components=0)\n",
@@ -754,7 +985,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-23T07:47:37.340311Z",
+     "iopub.status.busy": "2020-10-23T07:47:37.339167Z",
+     "iopub.status.idle": "2020-10-23T07:48:07.627193Z",
+     "shell.execute_reply": "2020-10-23T07:48:07.627632Z"
+    }
+   },
    "outputs": [],
    "source": [
     "animation = pbf_simulator.make_animation(\n",
@@ -798,7 +1036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
