--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:0\")\n",
+    "device = torch.device(\"cpu\")\n",
     "torch.backends.cudnn.benchmark = True\n",
     "torch.set_num_threads(12)"
    ]
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "projection = koopman_model.transform(featurization)\n",
-    "dtraj = deeptime.clustering.KmeansClustering(2).fit(projection).transform(projection)\n",
+    "dtraj = deeptime.clustering.Kmeans(2).fit(projection).transform(projection)\n",
     "msm = deeptime.markov.msm.MaximumLikelihoodMSM().fit(dtraj, lagtime=1).fetch_model()"
    ]
   },
@@ -373,7 +373,7 @@
     "tau = 1\n",
     "\n",
     "# Batch size for Stochastic Gradient descent\n",
-    "batch_size = 768\n",
+    "batch_size = 400\n",
     "\n",
     "# Which trajectory points percentage is used as training\n",
     "train_ratio = 0.9\n",
@@ -558,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
